express generator and cra with ts

--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "photo-spot-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/ChronisYan/photo-spot",
-  "author": "chronisyan",
-  "license": "MIT",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "express": "^4.17.1",
-    "helmet": "^3.23.3"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "helmet": "^3.23.3",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
